--- a/Website_3/style.css
+++ b/Website_3/style.css
@@ -43,7 +43,8 @@ html,body{
     width: 100%;
     display: flex;
     align-items: center;
-    z-index: 100;
+    position: relative;
+    z-index:9999999999;
     justify-content: space-between;
 }
 
@@ -94,6 +95,11 @@ html,body{
 #nav-part2 h4 a:hover{
     color: #fff;
     position: relative;
+}
+
+#nav h3{
+    display: none;
+    z-index: 9999999999;
 }
 
 #center{
@@ -629,3 +635,577 @@ border-radius: 50%;
         transform: translate(20%,70%);
     }
 }
+#loader{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 9999999999;
+    background-color: black;
+    top: 0;
+    transition: all linear 0.7s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#loader h1{
+    color: transparent;
+    font-size: 6vw;
+    font-family: neu;
+    background: linear-gradient( orange,orangered);
+    -webkit-background-clip: text;
+    position: absolute;
+    opacity: 0;
+    animation-name: load;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-timing-function: linear;
+    }
+    
+    #loader h1:nth-child(2){
+        animation-delay: 2s;
+    }
+    #loader h1:nth-child(3){
+        animation-delay: 3s;
+    }
+    
+    @keyframes load{
+        0%{
+               opacity: 0;
+        }
+        10%{
+            opacity: 1;
+        }
+        90%{
+            opacity: 1;
+        }
+        100%{
+          opacity: 0;
+        }
+    }
+
+
+
+
+
+@media (max-width:600px) {
+    
+#page1{
+    min-height: 100vh;
+    width: 100%;
+    padding: 0 0;
+}
+
+#nav{
+      padding: 8vw 5w;
+      width: 100%;
+
+      background-color: #EFEAE3;
+      /* background-color:#fff; */
+     
+}
+
+#nav h3{
+display: block;
+padding: 3vw 5vw;
+border: 1px solid #9b7e7e;
+border-radius: 50px;
+font-size: 4vw;
+font-weight: 400;
+padding-left: 4vw;
+font-family: neu;
+z-index: 9999;
+margin-right: 10px;
+margin-top: 10px;
+
+}
+
+#nav img{
+    height: 9vh;
+    transition: all ease 0.2s;
+}
+#nav-part2{
+    display: none;
+}
+
+
+#full-scr {
+    height: 100vh;
+    width: 100%;
+    background-color: #00000070;
+    position: fixed;
+    z-index: 50;
+    top: -100%;
+    transition: all ease 0.8s;
+}
+
+.full-part-1 {
+    height: 50%;
+    width: 100%;
+    background-color: #efeae3;
+    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+  }
+
+
+  
+#center{
+    height:62vh;
+    width: 100%;
+    background-color: #efeae3;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    justify-content: space-between;
+    border-bottom: 1px solid #000000bb;
+    padding-bottom: 10vw;
+    padding: 10vw 5vw;
+    position: relative;
+    z-index: 9;
+
+}
+#left{
+    padding-bottom: 20px;
+}
+
+#left h3{
+    width: 88%;
+    font-size: 5.6vw;
+    line-height: 6vw;
+    font-family: neu;
+}
+
+#center h1{
+    font-size: 17vw;
+    text-align: right;
+    line-height: 15vw;
+    font-family: neu;
+    /* padding-bottom: 100px; */
+}
+
+#page1 video{
+    width: 92%;
+    height: 70vh;
+    object-fit: cover;
+    object-position: center;
+    margin-left: 4%;
+    border-radius: 15px;
+    margin-top: 4vw;
+    position: relative;
+}
+
+#hero-shape{
+    position: absolute;
+    height: 76vw;
+    width: 82vw;
+    right: 0;
+    top: 65vh;
+}
+
+#page2{
+    width: 100%;
+    min-height: 100vh;
+    background-color:#efeae3;
+    padding: 8vw 0;
+    position: relative;
+}
+#moving-text{
+    white-space: nowrap;
+    overflow-x: auto;
+}
+#moving-text::-webkit-scrollbar{
+    display: none;
+}
+.con{
+    white-space: nowrap;
+    display: inline-block;
+    animation-name: move;
+    animation-duration: 10s;
+    animation-timing-function:linear;
+    animation-iteration-count: infinite;
+}
+
+#moving-text h1{
+font-size: 15vw;
+font-family: neu;
+display: inline-block;
+
+}
+
+#gola{
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-color: #fe302a;
+    display: inline-block;
+    margin: 2vw 2vw;
+}
+
+#page2-bottom{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10vw 4vw;
+    position: relative;
+    z-index: 9;
+}
+#page2-bottom h1{
+    font-size: 8vw;
+    line-height: 9vw;
+    font-family: neu;
+    width: 100%;
+}
+
+#bottom-part2{
+    width: 70%;
+    border-radius: 10px;
+
+}
+
+#bottom-part2 img{
+    width: 100%;
+    border-radius: 15px;
+}
+#bottom-part2 p{
+    font-weight: 200;
+    margin-top: 7vw;
+    font-size: 3vw;
+    font-family: neu;
+}
+
+#page2 #gooey{
+    height: 62vw;
+    width: 62vw;
+    border-radius: 50%;
+    position: absolute;
+    top: 58%;
+    left: 25%;
+    background:linear-gradient(to top right,#fe302a,#ff5c0b);
+    filter: blur(20px);
+    animation-name: gooey;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+}
+
+#loader {
+    font-size: 12vw;
+
+}
+
+#page3{
+    width: 100%;
+    min-height: 100vh;
+ background-color: #efeae3;
+ padding: 3vw 0;
+
+}
+.elem{
+    height: 120px;
+    width: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.338);
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 0 2vw;
+    overflow: hidden;
+}
+
+.elem  h2{
+    font-family: neu;
+    font-size: 4vw;
+    position: relative;
+    z-index: 9;
+}
+
+.elem .overlay{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-color: orange;
+    left: 0;
+    top: -100%;
+    transition: all ease 0.2s;
+}
+
+.elem:hover .overlay{
+    top: 0;
+}
+
+
+#fixed-image{
+    height: 40vw;
+    width: 40vw;
+    border-radius: 10px;
+    position: fixed;
+    z-index: 199;
+    left: 50%;
+    top: 25%;
+    display: none;
+    background-size: cover;
+    background-position: center;
+}
+.con2{
+    width: 100%;
+    height:100vh;
+    background-color: #efeae3;
+}
+
+#page4{
+    min-height: 100vh;
+    width: 100%;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+    /* justify-content: space-between; */
+    border-radius: 20px;
+    /* margin: 13px; */
+}
+
+#page4 #left{
+    height: 50%;
+    width: 100%;
+    /* background-color:; */
+    padding-top: 40px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  padding-left: 90px;
+  color: white;
+}
+
+#page4 #left h2{
+    font-size: 3rem;
+    line-height: 0.6;
+    font-family: neu;
+    margin-bottom: 17px;
+}
+#page4 #left p{
+    font-size: .8rem;
+    font-weight: 100;
+    font-family: neu;
+    padding-top: 10px;
+}
+
+#right1 {
+    object-fit: contain;
+    width: 100%;
+    height: 50%;
+
+}
+#right1 img{
+    background-position: center;
+    background-size: cover;
+    border-radius: 20px;
+    width: 100%;
+    height:100%;
+}
+
+
+
+.page5{
+    height: 90vh;
+    width: 100%;
+    background-color: antiquewhite;
+    padding:7vw 2vw;
+}
+
+.cir{
+    width: 100%;
+    height: 100%;
+    font-size: 17px;
+    background-color: antiquewhite;
+  display: flex;
+  align-items: center;
+}
+.cir h1{
+    font-size: 17px; 
+    font-family: neu;
+    font-weight: 200;
+}
+.cir .cir1{
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    background-color: #fe302a;
+    margin-right:10px;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    border-left: 1px solid #aeadad;
+    width: 30%;
+    padding:0vw 3vw;
+  }
+
+  .swiper-slide p{
+    width: 100%;
+    font-size:4.5vw;
+    font-family: neu;
+    color:black;
+    font-weight: 100;
+  }
+
+  #footer{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 9;
+    /* bottom: 0; */
+    display: flex;
+    /* justify-content:flex-end ; */
+    flex-direction: column;
+    background-color: black;
+    padding: 0vw 3vw;
+    font-family: neu;
+}
+
+#footer h1{
+    text-align: center;
+    font-size: 20vw;
+    font-family: neu;
+   color: white;
+
+}
+
+#footer-div{
+    height: 30vh;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    justify-content: space-between;
+    padding: 0vw 2vw;
+    z-index: 100;
+
+
+}
+
+#footer-div .footer-left{
+    color: white;
+    font-family: neu;
+
+}
+
+.footer-left h3{
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 45px;
+}
+#footer-div .footer-right{
+    color: white;
+    font-family: neu;
+
+
+}
+.footer-right p{
+    margin-top: 30px;
+    font-weight: 300;
+    font-size: 14px;
+}
+.inp{
+    /* width: 100%; */
+    border-bottom: 1px solid rgb(212, 146, 132);
+}
+input{
+    /* width: 90%; */
+    margin-top: 2.5vw;
+    font-size: 2vw;
+    color: white;
+    font-family: neuhassmediu;
+    background-color: transparent;
+    border: none;
+    /* padding-bottom: 0.4vw; */
+}
+input:focus{
+    color: white;
+    font-size: 0vw;
+    font-family: neuhassmediu;
+    outline: none;
+}
+
+::placeholder{
+    color: rgb(212, 146, 132);
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: neuhassmediu;
+}
+
+
+#footer-bottom{
+    border-top: 1px solid #dadada;
+    height: 40vh;
+    width: 100%;
+}
+
+#footer-bottom .footer-btm2{
+    margin-top: 10vw;
+    color: white;
+    display: flex;
+    /* justify-content: space-between; */
+    padding: 0vw 2vw;
+}
+#footer-bottom .footer-btm2 h3{
+    font-size: 12px;
+    font-family: neu;
+    font-weight: 300;
+}
+
+
+#hero-shape1{
+    z-index: 9;
+    position: absolute;
+    height: 36vw;
+    width: 100vw;
+    right: 0;
+    top: 0;
+}
+
+#hero-01{
+    height: 60%;
+    width: 100%;
+    background-color: #fe302a;
+    border-top-right-radius: 60%;
+    border-bottom-right-radius: 60%;
+    filter: blur(10px);
+    position: absolute;
+}
+#hero-02{
+    height: 40vw;
+    width : 100%;
+    background:linear-gradient(#fe302a,#fe3f0a);
+    border-radius: 50%;
+    filter: blur(25px);
+    position: absolute;
+    animation-name: anime02;
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+#hero-03{
+    height: 50vh;
+    width: 100%;
+    background:linear-gradient(#fe302a,#fe3f0a);
+border-radius: 50%;
+    filter: blur(25px);
+    position: absolute;
+
+    animation-name: anime01;
+    animation-duration: 6s;
+    animation-timing-function: linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
+}
+
+
